# matrixcbot

./: pyproject.toml
matrixcbot/: core.py
tests/: test_core.py
