[build-system]
requires = [
  "setuptools>=68.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "matrixcbot"
version = "0.1.0"
description = "Algorithmic forex trading bot with advanced filtering and AI integration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "zalizman", email = "contact@example.com" },
]
keywords = ["forex", "trading", "bot", "algorithmic", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "requests>=2.28.0",
  "python-dotenv>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "flake8>=6.0",
  "mypy>=1.0",
]

[project.urls]
Repository = "https://github.com/zalizman/matrixcbot"
Issues = "https://github.com/zalizman/matrixcbot/issues"

[tool.setuptools]
packages = ["matrixcbot"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=matrixcbot --cov-report=html --cov-report=term"
